       Added PFNCRASHCALLBACK() callback function prototype, CR_CRASH_CALLBACK_INFO
       structure and crSetCrashCallback() function.

- New: Added an ability to continue program execution after crash. This can be performed
       through crash callback (see CR_CRASH_CALLBACK_INFO::bContinueExecution structure
       member). This partially implements feature request in issue 125.

- Fixed: Memory Leak (or rather memory not deallocated before program exit) (issue 169)
- Fixed: Can not restart application. Use CR_INST_APP_RESTART flag (issue 165)


--- Ver. 1.3.1 ---

- New: Removed support of obsolete Visual Studio .NET 2003. 

- New: Removed deprecated functions crAddFileA(), crAddFileW(), 
       crInstallToCurrentThread(), crExceptionFilter() and deprecated 
       constant CR_WIN32_STRUCTURED_EXCEPTION.

- New: Improved robustness to stack overflow (issue 121). Now stack overflow is handled
       in separate thread makeing CrashRpt more robust to problem of not enogh stack memory.
       
- New: Added constant CR_STACK_OVERFLOW that can be passed to crEmulateCrash() function
       to cause stack overflow.

- New: Added an ability to attach more files to error report or delete selected files
       from error report through context menu of Error Report Details dialog (issue 132).
       Introduced new flag CR_INST_ALLOW_ATTACH_MORE_FILES for crInstall() function. 

- New: Added new CR_AF_ALLOW_DELETE flag for crAddFile2() function. If this flag is specified, 
       the user will be able to delete the file from error report using context menu of 
       Error Report Details dialog. (issue 132)

- New: Added support of SMTP authentication (AUTH LOGIN) (Issue 143).

- New: Added an ability to store the user's E-mail address and re-use later. When user
       enters his E-mail into "Your E-mail" field of Error Report dialog, the address
       is  saved and stored in ~CrashRpt.ini file. When a crash occurs